[tool.poetry]
name = "product-engineering"
version = "0.1.0"
description = ""
authors = ["Daniel Bessonov <danielbess16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
